--- a/API.csproj
+++ b/API.csproj
@@ -24,5 +24,6 @@
     <Folder Include="Services\" />
     <Folder Include="Errors\" />
     <Folder Include="Middleware\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
