--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "CloudinarySettings": {
+    "CloudName": "rayle",
+    "ApiKey": "772667168222828",
+    "ApiSecret": "qBNcPO7GAQxjPrIdw-Exk6202eQ"
+  },
+    "AllowedHosts": "*"
+  }
