SignalR - Adding Hub

--- a/API.csproj
+++ b/API.csproj
@@ -30,5 +30,6 @@
     <Folder Include="Middleware\" />
     <Folder Include="Extensions\" />
     <Folder Include="Helpers\" />
+    <Folder Include="SignalR\" />
   </ItemGroup>
 </Project>
