Publishing - Change database configuration to PostgreSQL

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=datingApp;ConnectRetryCount=0;User Id=sa;Password=ab123456..;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=datingApp;User Id=ray;Password=ab123456..;"
   },
   "TokenKey": "a|AUc?=?jnjP,7&f*To#Okn$KpRp'%*[71x7h_HG:!S,pv$ipe7\\8t4WS]WHI,'|id8qTofQY8;h:5rZ9'vwA.[3MA:?*7-0.laC",
   "Logging": {
