--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=datingApp;User Id=ray;Password=ab123456..;"
+  },
+  "TokenKey": "a|AUc?=?jnjP,7&f*To#Okn$KpRp'%*[71x7h_HG:!S,pv$ipe7\\8t4WS]WHI,'|id8qTofQY8;h:5rZ9'vwA.[3MA:?*7-0.laC",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,5 +15,5 @@
     "ApiKey": "772667168222828",
     "ApiSecret": "qBNcPO7GAQxjPrIdw-Exk6202eQ"
   },
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+}
